conformance_test/positive_tests/21_configuration_operations/2101_connection_operations/210102_disconnect_and_unmap_operations/NegSem_210102_disconnect_and_unmap_operations_003.ttcn
/******************************************************************************
 * Copyright (c) 2000-2016 Ericsson Telecom AB
 * All rights reserved. This program and the accompanying materials
 * are made available under the terms of the Eclipse Public License v1.0
 * which accompanies this distribution, and is available at
 * http://www.eclipse.org/legal/epl-v10.html
 *
 * Contributors:
 *   Adrien Kirjak – initial implementation
 *
 ** @version  0.0.1
 ** @purpose  1:21.1.2, Verify that unmapping all ports of all components is not possible in PTC
 ** @verdict  pass reject
 ***************************************************/

// The following requirements are tested:
// The all component keyword ... shall only be used by the MTC.

module NegSem_210102_disconnect_and_unmap_operations_003 {
  
    type port P message {
        inout integer
    } with {extension "internal"}

    type component GeneralComp
    {
        port P p;
    }
	
	function f() runs on GeneralComp {
		unmap(all component:all port); // error: allowed in PTC only
		setverdict(pass);
	}
	
    testcase TC_NegSem_210102_disconnect_and_unmap_operations_003() runs on GeneralComp system GeneralComp {
        var GeneralComp v_ptc := GeneralComp.create;	
        map(self:p, system:p);
		map(v_ptc:p, system:p);
        v_ptc.start(f());
		v_ptc.done; // wait for the PTC to finish
    }
    control{
        execute(TC_NegSem_210102_disconnect_and_unmap_operations_003());
    }
}

